[package]
name = "virtio-queue"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
description = "virtio queue implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
vm-memory = ">=0.4.0"
vmm-sys-util = ">=0.4.0"
log = ">=0.4.6"

[dev-dependencies]
criterion = "0.3.0"
vm-memory = { version = ">=0.4.0", features = ["backend-mmap", "backend-atomic" ] }

[features]
test_utilities = []

[[bench]]
name = "main"
harness = false
